# heron_simulator

./: README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
heron_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_gazebo/config/: heron_controller.yaml
heron_gazebo/launch/: heron_lake_world.launch  heron_sim.launch  heron_world.launch  spawn_heron.launch
heron_gazebo/scripts/: activate_control_service  cmd_drive_translate  cmd_drive_translate.py  mag_interpreter.py  navsat_vel_translate  navsat_vel_translate.py  rpy_translator.py  twist_translate  twist_translate.py  vector3_to_magnetic_field
heron_gazebo/worlds/: lake.world  ocean_surface.world
heron_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
