<?xml version="1.0"?>
<package>
  <name>heron_gazebo</name>
  <version>0.3.1</version>
  <description>Simulator package for Heron</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="gstoppi@clearpathrobotics.com">Guy Stoppi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>uuv_gazebo_ros_plugins_msgs</run_depend>
  <run_depend>heron_msgs</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>uuv_gazebo_worlds</run_depend>

  <export>
  </export>
</package>
